# persona-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.example.json  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  gemini.md  pyproject.toml
.claude/: settings.json
.claude/commands/: speckit.specify.md
.gemini/: settings.json
.gemini/commands/: speckit.specify.toml
.gemini/policies/: gemini-permissions.toml
backend/: Makefile  README.md  pyproject.toml
backend/src/persona/: accomplishment_service.py  application_service.py  auth.py  config.py  database.py  db.py  migrations.py  models.py  note_service.py  resume_service.py  server.py
backend/src/persona/api/: routes.py
backend/src/persona/tools/: accomplishment_tools.py  application_tools.py  note_tools.py  read.py  resume_tools.py  write.py
backend/tests/: conftest.py
backend/tests/contract/: test_accomplishment_api.py  test_auth_contract.py  test_note_api.py  test_read_tools.py  test_rest_api.py  test_write_tools.py
backend/tests/integration/: test_cross_interface.py  test_mcp_user_scoping.py  test_multi_user.py  test_server.py  test_static_serving.py
backend/tests/unit/: test_accomplishment_service.py  test_application_service.py  test_auth.py  test_config.py  test_database.py  test_migrations.py  test_models.py  test_note_service.py  test_require_user_id.py  test_resume_service.py
docs/: deployment.md
frontend/: .env.local.example  Makefile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infra/: .gitignore  bootstrap.sh
scripts/: authenticate.sh  schedule_claude.sh
specs/: roadmap.md
tests/: conftest.py
(+255 files in other folders)
