[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persona"
version = "0.1.0"
description = "MCP server for managing personal data — resume, job search, and more"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
persona = "persona.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/persona"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
